# vminstanceapi/main.go
@@ -8,6 +8,7 @@ import (
 	httpSwagger "github.com/swaggo/http-swagger"
 	"log"
 	"net/http"
+	_ "vminstanceapi/docs"
 	"vminstanceapi/stores"
 )
 
@@ -27,11 +28,11 @@ func main() {
 	router := mux.NewRouter()
 
 	//create api endpoints
-	router.HandleFunc("/vminstances", stores.SaveVMInstance).Methods("POST")
-	router.HandleFunc("/vminstances", stores.GetAllVMInstances).Methods("GET")
-	router.HandleFunc("/vminstances/{vmName}", stores.GetVMConfigurationByName).Methods("GET")
-	router.HandleFunc("/vminstances/{vmName}", stores.DeleteVMInstance).Methods("DELETE")
-	router.HandleFunc("/vminstances", stores.UpdateVMInstance).Methods("PUT")
+	router.HandleFunc("/vminstances/v1.0", stores.SaveVMInstance).Methods("POST")
+	router.HandleFunc("/vminstances/v1.0", stores.GetAllVMInstances).Methods("GET")
+	router.HandleFunc("/vminstances/v1.0/{vmName}", stores.GetVMConfigurationByName).Methods("GET")
+	router.HandleFunc("/vminstances/v1.0/{vmName}", stores.DeleteVMInstance).Methods("DELETE")
+	router.HandleFunc("/vminstances/v1.0", stores.UpdateVMInstance).Methods("PUT")
 
 	stores.CreateDBConnection()
 	//swagger documentation
